# COMSW4156-Drop_Table_Team

./: .gitignore  CPPLINT.cfg  Dockerfile  Makefile  README.md  config.json  cpplint_OUTPUT.txt  install.sh  setup-mongocxx
.github/workflows/: staticAnalysis.yml  test.yml
include/: DatabaseHandler.h  Server.h  TranslationOutput.h  Translations.h  Translator.h  User.h  ocr.h  pdftotext.h  tesseract.h
poppler/: poppler.h  test
src/: DatabaseHandler.cpp  Makefile  Server.cpp  TranslationOutput.cpp  Translations.cpp  Translator.cpp  User.cpp  cmake_install.cmake  compilation.txt  main.cpp  ocr.cpp  ocr.h  overlay.h  pdftotext.cpp  pdftotext.h  poppler.h  setup.sh
src/lib/: libopencv_calib3d.so.4.8.0  libopencv_features2d.so.4.8.0  libopencv_flann.so.4.8.0  libopencv_highgui.so.4.8.0  libopencv_imgcodecs.so.4.8.0  libopencv_ml.so.4.8.0  libopencv_objdetect.so.4.8.0  libopencv_photo.so.4.8.0  libopencv_stitching.so.4.8.0  libopencv_video.so.4.8.0  libopencv_videoio.so.4.8.0
tesseract/: Makefile  install.sh  tesseract.h  test.cpp
test/: .gitignore  CMakeLists.txt  DatabaseHandlerUnitTests.h  README.md  TranslationUnitTests.h  TranslationsUnitTests.h  installGtest.sh  runGtest.sh  testMain.cpp
